# icicle

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  bus_arbiter.sv  checks.cfg  clk_div.sv  complete.sby  complete.sv  disasm.py  dmemcheck.sby  dmemcheck.sv  ecp5-pll.sv  equiv.sh  equiv.ys  flash.sv  ice40.ys  ice40hx8k-b-evn.pcf  icicle.sv  imemcheck.sby  imemcheck.sv  progmem.c  progmem.lds  progmem.s  ram.sv  rv32.sv  rv32_alu.sv  rv32_alu_ops.sv  rv32_branch.sv  rv32_branch_ops.sv  rv32_control.sv  rv32_csrs.sv  rv32_decode.sv  rv32_execute.sv  rv32_fetch.sv  rv32_hazard.sv  rv32_mem.sv  rv32_mem_ops.sv  rv32_opcodes.sv  (+11 more)
arch/: ecp5.mk  ice40.mk
boards/: blackice-ii-defines.sv  blackice-ii.mk  blackice-ii.pcf  ecp5-evn.mk  ice40-edu-fpga-defines.sv  ice40-edu-fpga.mk  ice40-edu-fpga.pcf  ice40hx8k-b-evn-defines.sv  ice40hx8k-b-evn.mk  icebreaker-defines.sv  icebreaker.pcf  upduino-defines.sv  upduino.mk
examples/: .gitignore  Makefile  blinky.c  echo.c  hello.c  icebreaker.lds  start.s
icicle/: adder.py  alu.py  bram.py  branch.py  cli.py  control.py  cpu.py  decode.py  execute.py  fetch.py  gpio.py  ice40_spram.py  imm.py  loadstore.py  logic.py  mem.py  pc.py  pcgen.py  pipeline.py  pipeline_regs.py  regs.py  riscv.py  rvfi.py  shift.py  soc.py  uart.py  wdata.py  wishbone.py  writeback.py
icicle/boards/: ecp5_5g_evn.py  ice40_hx8k_b_evn.py  icebreaker.py
icicle/soc/: bram.py  flash.py  soc.py  uart.py
icicle/test/: test_adder.py  test_alu.py  test_branch.py  test_control.py  test_decode.py  test_imm.py  test_loadstore.py  test_logic.py  test_pc.py  test_pcgen.py  test_pipeline.py  test_regs.py  test_shift.py  test_wdata.py  test_writeback.py
programs/hello/: main.c
