[metadata]
name = icicle
version = attr: setuptools_scm.get_version

[options]
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    nmigen @ git+https://github.com/m-labs/nmigen@master
    nmigen-boards @ git+https://github.com/m-labs/nmigen-boards@master

[options.entry_points]
console_scripts =
    icicle = icicle.cli:main
    icicle-ice40-hx8k-b-evn = icicle.boards.ice40_hx8k_b_evn:main
    icicle-icebreaker = icicle.boards.icebreaker:main
