[metadata]
name = icicle
version = attr: setuptools_scm.get_version

[options]
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    amaranth @ git+https://github.com/amaranth-lang/amaranth@main
    amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards@main
    amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc@main

[options.entry_points]
console_scripts =
    icicle = icicle.cli:main
    icicle-ecp5-5g-evn = icicle.boards.ecp5_5g_evn:main
    icicle-ice40-hx8k-b-evn = icicle.boards.ice40_hx8k_b_evn:main
    icicle-icebreaker = icicle.boards.icebreaker:main
